[gd_scene load_steps=4 format=2]

[ext_resource path="res://UserInterface/Title.tscn" type="PackedScene" id=1]
[ext_resource path="res://UserInterface/But_ChangeScene.tscn" type="PackedScene" id=2]
[ext_resource path="res://screens/grabFocus.gd" type="Script" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
margin_bottom = 2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" parent="VBoxContainer2" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 1024.0
margin_bottom = 66.0
text = "Import Character"

[node name="But_ChangeScene" parent="VBoxContainer2/Title" instance=ExtResource( 2 )]
margin_right = 106.0
margin_bottom = 51.0
text = "Back"
next_scene_path = "res://Screens/MenuScreen.tscn"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2"]
margin_top = 70.0
margin_right = 1024.0
margin_bottom = 118.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="But_OpenFile" type="Button" parent="VBoxContainer2/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 20.0
text = "Open Character File"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="VBoxContainer2/VBoxContainer"]
margin_top = 24.0
margin_right = 800.0
margin_bottom = 374.0
rect_min_size = Vector2( 400, 140 )
window_title = "Open a File"
mode = 0
access = 2
current_dir = "/Users/BD_1/Documents/Godot/mainmenu:impchar/rpg"
current_path = "/Users/BD_1/Documents/Godot/mainmenu:impchar/rpg/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="VBoxContainer2/VBoxContainer"]
visible = false
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 38.0

[node name="LineEdit" type="LineEdit" parent="VBoxContainer2/VBoxContainer"]
visible = false
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 48.0

[node name="Save_Button" type="Button" parent="VBoxContainer2/VBoxContainer"]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 44.0
text = "Save"

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer2/VBoxContainer"]
margin_top = 48.0
margin_right = 1024.0
margin_bottom = 48.0

[node name="textBox" type="LineEdit" parent="VBoxContainer2/VBoxContainer/VBoxContainer3"]
visible = false
margin_right = 1024.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="But_Remember" type="Button" parent="VBoxContainer2"]
margin_top = 122.0
margin_right = 1024.0
margin_bottom = 142.0
text = "Remember File"

[connection signal="pressed" from="VBoxContainer2/VBoxContainer/But_OpenFile" to="." method="_on_Button_pressed"]
[connection signal="file_selected" from="VBoxContainer2/VBoxContainer/FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="VBoxContainer2/VBoxContainer/Save_Button" to="." method="_on_Save_Button_pressed"]
[connection signal="pressed" from="VBoxContainer2/But_Remember" to="." method="_on_But_Remember_pressed"]
